Ajuste de estilo de contactoblog y proyectos

--- a/app/index.html
+++ b/app/index.html
@@ -111,9 +111,9 @@
             <div class="col-sm-3">
                 <div class="company_address wow slideInDown">
                     <h2>Información</h2>
-                    <a class="footer-links" ui-sref="page({slug: 'programa-de-afiliados'})">Programa de afiliados</a>
-                    <a class="footer-links" ui-sref="page({slug: 'preguntas-frecuentes'})">Preguntas frecuentes</a>
-                    <a class="footer-links" ui-sref="page({slug: 'politicas-de-privacidad'})">Políticas de privacidad</a>
+                    <a class="footer-links" ui-sref="page({slug: 'programa-de-afiliados'})">Programa de afiliados</a><br/>
+                    <a class="footer-links" ui-sref="page({slug: 'preguntas-frecuentes'})">Preguntas frecuentes</a><br/>
+                    <a class="footer-links" ui-sref="page({slug: 'politicas-de-privacidad'})">Políticas de privacidad</a><br/>
                     <a class="footer-links" ui-sref="page({slug: 'buzon-de-quejas-y-sugerencias'})">Buzón de quejas y sugerencias</a>
                 </div>
             </div>
@@ -122,7 +122,7 @@
     <hr class="divider_footer"/>
     <div class="container">
         <div class="text-center">
-            Diseño y desarrollo 2015 por <a class="footer-links" href="*">Tingsystems</a>
+            Diseño y desarrollo 2015 por <a class="footer-links" href="http://www.tingsystems.com/">Tingsystems</a>
         </div>
     </div>
 </footer>
