--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,21 @@
     <!-- endinject -->
     <!-- endbuild -->
     <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">var _smartsupp = _smartsupp || {};_smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';window.smartsupp||(function(d) {var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];s=d.getElementsByTagName('script')[0];c=d.createElement('script');c.type='text/javascript';c.charset='utf-8';c.async=true;c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);})(document);</script>
+    <script type="text/javascript">var _smartsupp = _smartsupp || {};
+    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';
+    window.smartsupp || (function (d) {
+        var s, c, o = smartsupp = function () {
+            o._.push(arguments)
+        };
+        o._ = [];
+        s = d.getElementsByTagName('script')[0];
+        c = d.createElement('script');
+        c.type = 'text/javascript';
+        c.charset = 'utf-8';
+        c.async = true;
+        c.src = '//www.smartsuppchat.com/loader.js?';
+        s.parentNode.insertBefore(c, s);
+    })(document);</script>
 </head>
 <body>
 <!--[if	lt	IE	8]>
@@ -103,16 +117,20 @@
                 <div class="company_address wow slideInDown">
                     <h2>Síguenos en</h2>
 
-                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i class="fa fa-facebook"></i></a>
-                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems"><i class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i
+                            class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems"><i
+                            class="fa fa-twitter"></i></a>
                     <a class="footer-links social-media" href=""><i class="fa fa-google-plus"></i></a>
-                    <a class="footer-links social-media" href=https://www.instagram.com/tingsystems/"><i class="fa fa-instagram"></i></a>
+                    <a class="footer-links social-media" href=https://www.instagram.com/tingsystems/"><i
+                            class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="company_address wow slideInDown">
                     <h2>Información</h2>
-                    <a class="footer-links" ui-sref="page({slug: footer_link.slug})" ng-repeat="footer_link in footer_info.results">{{ footer_link.title }}</a>
+                    <a class="footer-links" ui-sref="page({slug: footer_link.slug})"
+                       ng-repeat="footer_link in footer_info.results">{{ footer_link.title }}</a>
                 </div>
             </div>
         </div>
@@ -141,10 +159,23 @@
 <script src="/js/controllers.js"></script>
 <script src="/js/directives.js"></script>
 <script src="/js/services.js"></script>
+<script src="/js/templates.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-47259316-3', 'tingsystems.com');ga('require', 'displayfeatures');ga('send', 'pageview');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-47259316-3', 'tingsystems.com');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
 </script>
 </body>
 </html>
