--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="img/logo.png"
+                    <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
                                                           class="logo" alt="Tingsystems"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -131,15 +131,16 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
 <!-- inject:js -->
 <script src="/js/app.js"></script>
 <script src="/js/controllers.js"></script>
+<script src="/js/custom.js"></script>
 <script src="/js/directives.js"></script>
 <script src="/js/services.js"></script>
 <script src="/js/templates.js"></script>
