metas y fix al index

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <link rel="icon" type="image/png" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>Tingsystems</title>
+    <title>Tingsystems - Tu consultor tecnológico</title>
+    <meta name="keywords" content="ux, ui, sitios web, vps, desarrollo web, desarrollo a medida, apps, big data, e-commerce">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <base href="/">
@@ -14,9 +15,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -104,10 +105,10 @@
                 <div class="company_address wow slideInDown">
                     <h2>Síguenos en</h2>
 
-                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i class="fa fa-facebook"></i></a>
-                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems"><i class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a class="footer-links social-media" href=""><i class="fa fa-google-plus"></i></a>
-                    <a class="footer-links social-media" href=https://www.instagram.com/tingsystems/"><i class="fa fa-instagram"></i></a>
+                    <a class="footer-links social-media" href="https://www.instagram.com/tingsystems/" target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
@@ -131,7 +132,7 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <!-- endbower -->
