--- a/app/index.html
+++ b/app/index.html
@@ -64,16 +64,16 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="header-mainmenu">
                     <ul class="main-nav nav navbar-nav navbar-right">
-                        <li class="wow fadeInDown" data-wow-delay="2s">
+                        <li>
                             <a ui-sref="page({slug: 'nosotros'})">Nosotros</a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="2s">
+                        <li>
                             <a ui-sref="projects({kind: 'project'})">Proyectos</a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="2s">
+                        <li >
                             <a ui-sref="blog({kind: 'post'})">Blog</a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="2s"><a ui-sref="contact">Contacto</a></li>
+                        <li><a ui-sref="contact">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -97,12 +97,12 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
-                <div class="company_logo wow slideInDown">
+                <div class="company_logo">
                     <img src="../img/icon.png">
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="company_address wow slideInDown">
+                <div class="company_address">
                     <h2>Contacto</h2>
 
                     <p>Colonia Hospitales, Calzada Juarez #367 Jiquilpan, Michoacán, México
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <div class="company_address wow slideInDown">
+                <div class="company_address">
                     <h2>Síguenos en</h2>
 
                     <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i
