--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
     </div>
     <hr class="divider_footer"/>
     <div class="container">
-        <div class="text-center wow slideInDown">
+        <div class="text-center">
             Diseño y desarrollo 2015 por <a class="footer-links" href="http://www.tingsystems.com/">Tingsystems</a>
         </div>
     </div>
