Ajuste de estilo en sección de contacto, se agrego flecha en el slider que indica que hay  más información y se haga scroll

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
     <!-- Fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -96,8 +98,9 @@
                     </p>
 
                     <h3>
-                        <a class="footer-links" href="tel:013531283781">01(353) 128 3781</a>
-                        <a class="footer-links" href="mailto:info@tingsystems.com">info@tingsystems.com</a>
+                        <a class="footer-links" href="tel:013531283781">01(353) 128 3781</a><br/><br/>
+                        <a class="footer-links" href="mailto:info@tingsystems.com">info@tingsystems.com</a><br/><br/>
+                        <a href="/contact" class="footer-links">+ Información</a>
                     </h3>
                 </div>
             </div>
