--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/angular-loading-bar/build/loading-bar.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -77,7 +79,9 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
-            <div ui-view="content"></div>
+            <div ui-view="content">
+                <section id="content-area"> <div class="container"> <div class="row"> </div> </div> </section>
+            </div>
         </div>
     </div>
 </div>
@@ -87,7 +91,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="company_logo">
-                    <img src="../img/icon.png">
+                    <img src="img/icon.png">
                 </div>
             </div>
             <div class="col-sm-3">
@@ -100,7 +104,7 @@
                     <h3>
                         <a class="footer-links" href="tel:013531283781">01(353) 128 3781</a><br/><br/>
                         <a class="footer-links" href="mailto:info@tingsystems.com">info@tingsystems.com</a><br/><br/>
-                        <a href="/contact" class="footer-links">+ Información</a>
+                        <a ui-sref="contact" class="footer-links">+ Información</a>
                     </h3>
                 </div>
             </div>
@@ -139,6 +143,7 @@
 <script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
