--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,7 @@
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular-loading-bar/build/loading-bar.js"></script>
+<script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
