Cambios para servir archivos desde el propio server

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8"/>
     <link rel="icon" type="image/png" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title-placeholder ui-view="title" autoscroll></title-placeholder>
     <meta name="keywords" content="ux, ui, sitios web, vps, desarrollo web, desarrollo a medida, apps, big data, e-commerce">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -16,21 +15,22 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="lib/angular-loading-bar/build/loading-bar.css" />
+    <link rel='stylesheet' href='lib/animate.css/animate.css' />
+    <link rel='stylesheet' href='lib/font-awesome/css/font-awesome.css' />
+    <link rel='stylesheet' href='lib/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='lib/angular-loading-bar/build/loading-bar.css' />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';window.smartsupp || (function (d) {var s, c, o = smartsupp = function () {o._.push(arguments)};o._ = [];s = d.getElementsByTagName('script')[0];c = d.createElement('script');c.type = 'text/javascript';c.charset = 'utf-8';c.async = true;c.src = '//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c, s);})(document);</script>
+    <title-placeholder ui-view="title" autoscroll></title-placeholder>
 </head>
 <body>
 <!--[if	lt	IE	8]>
