--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,11 @@
 <html lang="es" ng-app="annalise">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" type="image/png" href="">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="keywords" content="ux, ui, sitios web, vps, desarrollo web, desarrollo a medida, apps, big data, e-commerce">
+    <meta name="description" content="Tingsystems: Tu consultor tecnológico"/>
+    <meta name="keywords"
+          content="ux, ui, sitios web, vps, desarrollo web, desarrollo a medida, apps, big data, e-commerce">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <base href="/">
@@ -21,15 +23,51 @@
     <link rel='stylesheet' href='lib/font-awesome/css/font-awesome.css' />
     <link rel='stylesheet' href='lib/bootstrap/dist/css/bootstrap.css' />
     <link rel='stylesheet' href='lib/angular-loading-bar/build/loading-bar.css' />
+    <link rel='stylesheet' href='lib/angular-toasty/dist/angular-toasty.css' />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="{{ post.title }}" ng-if="post">
+    <meta itemprop="description" content="{{ post.excerpt }}" ng-if="post">
+    <meta itemprop="image" content="{{ post.urlImages.original }}" ng-if=" post">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:title" content="{{ post.title }}" ng-if="post">
+    <meta name="twitter:description" content="{{ post.excerpt }}" ng-if="post">
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src"
+          content="{{ post.urlImages.original }}"
+          ng-if="post">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{{ post.title }}" ng-if="post"/>
+    <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
+    <meta property="og:image"
+          content="{{ post.urlImages.original }}"
+          ng-if="post"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="tingsystems"/>
+    <meta property="og:url" content="https://www.tingsystems.com{{ $state.href($state.current.name) }}"/>
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';window.smartsupp || (function (d) {var s, c, o = smartsupp = function () {o._.push(arguments)};o._ = [];s = d.getElementsByTagName('script')[0];c = d.createElement('script');c.type = 'text/javascript';c.charset = 'utf-8';c.async = true;c.src = '//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c, s);})(document);</script>
+    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';
+    window.smartsupp || (function (d) {
+        var s, c, o = smartsupp = function () {
+            o._.push(arguments)
+        };
+        o._ = [];
+        s = d.getElementsByTagName('script')[0];
+        c = d.createElement('script');
+        c.type = 'text/javascript';
+        c.charset = 'utf-8';
+        c.async = true;
+        c.src = '//www.smartsuppchat.com/loader.js?';
+        s.parentNode.insertBefore(c, s);
+    })(document);</script>
     <title-placeholder ui-view="title" autoscroll></title-placeholder>
 </head>
 <body>
@@ -53,7 +91,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                          class="logo" alt="Tingsystems"></a>
+                                                                class="logo" alt="Tingsystems"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="header-mainmenu">
@@ -64,7 +102,7 @@
                         <li>
                             <a ui-sref="page({slug: 'nosotros'})">Nosotros</a>
                         </li>
-                        <li >
+                        <li>
                             <a ui-sref="blog({kind: 'post'})">Blog</a>
                         </li>
                     </ul>
@@ -82,7 +120,11 @@
     <div class="container-fluid">
         <div class="row">
             <div ui-view="content">
-                <section id="content-area"> <div class="container"> <div class="row"> </div> </div> </section>
+                <section id="content-area">
+                    <div class="container">
+                        <div class="row"></div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
@@ -114,10 +156,14 @@
                 <div class="company_address">
                     <h2>Síguenos en</h2>
 
-                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <a class="footer-links social-media" href="https://www.linkedin.com/company/tingsystems" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                    <a class="footer-links social-media" href="https://www.instagram.com/tingsystems/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems" target="_blank"><i
+                            class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems" target="_blank"><i
+                            class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href="https://www.linkedin.com/company/tingsystems"
+                       target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a class="footer-links social-media" href="https://www.instagram.com/tingsystems/"
+                       target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
@@ -147,6 +193,8 @@
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="lib/angular-toasty/dist/angular-toasty.js"></script>
+<script src="lib/angular-scroll/angular-scroll.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
@@ -160,7 +208,16 @@
 <!-- endinject -->
 <!-- endbuild -->
 <script>
-    (function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o), m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');ga('create', 'UA-47259316-3', 'tingsystems.com');ga('require', 'displayfeatures');ga('send', 'pageview');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 </script>
 </body>
 </html>
