--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/png" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title-placeholder ui-view="title" autoscroll></title-placeholder>
-    <meta name="keywords" content="ux, ui, sitios web, vps, desarrollo web, desarrollo a medida, apps, big data, e-commerce">
+    <meta name="keywords"
+          content="Especialistas en ropa deportiva para Dama">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <meta name="viewport" content="width=device-width"/>
     <base href="/">
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
@@ -30,7 +30,20 @@
     <!-- endbuild -->
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';window.smartsupp || (function (d) {var s, c, o = smartsupp = function () {o._.push(arguments)};o._ = [];s = d.getElementsByTagName('script')[0];c = d.createElement('script');c.type = 'text/javascript';c.charset = 'utf-8';c.async = true;c.src = '//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c, s);})(document);</script>
+    _smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';
+    window.smartsupp || (function (d) {
+        var s, c, o = smartsupp = function () {
+            o._.push(arguments)
+        };
+        o._ = [];
+        s = d.getElementsByTagName('script')[0];
+        c = d.createElement('script');
+        c.type = 'text/javascript';
+        c.charset = 'utf-8';
+        c.async = true;
+        c.src = '//www.smartsuppchat.com/loader.js?';
+        s.parentNode.insertBefore(c, s);
+    })(document);</script>
 </head>
 <body>
 <!--[if	lt	IE	8]>
@@ -41,36 +54,66 @@
 </p>
 <![endif]-->
 <header class="header">
-    <nav class="mainmenu">
-        <div class="container container-main">
+    <nav class="navbar navbar-default">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar navbar-nobg">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainmenu">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                          class="logo" alt="Tingsystems"></a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="header-mainmenu">
-                    <ul class="main-nav nav navbar-nav navbar-right">
-                        <li>
-                            <a ui-sref="projects({kind: 'project'})">Proyectos</a>
-                        </li>
-                        <li>
-                            <a ui-sref="page({slug: 'nosotros'})">Nosotros</a>
-                        </li>
-                        <li >
-                            <a ui-sref="blog({kind: 'post'})">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
 
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainmenu">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
+                                                            class="logo" alt="Tingsystems"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="header-mainmenu">
+                <ul class="main-nav nav navbar-nav navbar-right">
+                    <li>
+                        <a ui-sref="projects({kind: 'project'})"><i class="fa fa-question-circle fa-2x"></i> </a>
+                    </li>
+                    <li>
+                        <a ui-sref="page({slug: 'nosotros'})"><i class="fa fa-user fa-2x"></i> </a>
+                    </li>
+                    <li>
+                        <a ui-sref="blog({kind: 'post'})"> <i class="fa fa-shopping-cart fa-2x"></i> </a>
+                    </li>
+                </ul>
+                <ul class=" nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Ropa <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Playeras</a></li>
+                            <li><a href="#">Chamarras </a></li>
+                            <li><a href="#">Sudaderas</a></li>
+                            <li><a href="#">Pants y sudaderas</a></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Accesorios <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Gorras</a></li>
+                            <li><a href="#">Bufandas </a></li>
+                            <li><a href="#">Calcetines</a></li>
+                            <li><a href="#">Guantes</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a ui-sref="projects({kind: 'project'})">Deporte</a>
+                    </li>
+                    <li>
+                        <a ui-sref="page({slug: 'nosotros'})">Blog</a>
+                    </li>
+                    <li>
+                        <a ui-sref="blog({kind: 'post'})">Contacto</a>
+                    </li>
+                </ul>
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -82,7 +125,11 @@
     <div class="container-fluid">
         <div class="row">
             <div ui-view="content">
-                <section id="content-area"> <div class="container"> <div class="row"> </div> </div> </section>
+                <section id="content-area">
+                    <div class="container">
+                        <div class="row"></div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
@@ -114,10 +161,14 @@
                 <div class="company_address">
                     <h2>Síguenos en</h2>
 
-                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <a class="footer-links social-media" href="https://www.linkedin.com/company/tingsystems" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                    <a class="footer-links social-media" href="https://www.instagram.com/tingsystems/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems" target="_blank"><i
+                            class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems" target="_blank"><i
+                            class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href="https://www.linkedin.com/company/tingsystems"
+                       target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a class="footer-links social-media" href="https://www.instagram.com/tingsystems/"
+                       target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
@@ -160,7 +211,19 @@
 <!-- endinject -->
 <!-- endbuild -->
 <script>
-    (function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o), m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');ga('create', 'UA-47259316-3', 'tingsystems.com');ga('require', 'displayfeatures');ga('send', 'pageview');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-47259316-3', 'tingsystems.com');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
 </script>
 </body>
 </html>
