avances en home

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -244,6 +245,7 @@
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
