Commit for update files

--- a/app/index.html
+++ b/app/index.html
@@ -230,6 +230,7 @@
 <script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
+<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
