Change template for category

--- a/app/index.html
+++ b/app/index.html
@@ -117,14 +117,14 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Ropa <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li ng-repeat="item in ropa"><a ui-sref="post_category({slug: item.slug})">{{ item.name }}</a></li>
+                            <li ng-repeat="item in ropa"><a ui-sref="category({slug: item.slug})">{{ item.name }}</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Accesorios <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li ng-repeat="item in accesorios"><a ui-sref="post_category({slug: item.slug})">{{ item.name }}</a></li>
+                            <li ng-repeat="item in accesorios"><a ui-sref="category({slug: item.slug})">{{ item.name }}</a></li>
                         </ul>
                     </li>
                     <li>
