contact y avances de detail category

--- a/app/index.html
+++ b/app/index.html
@@ -131,10 +131,10 @@
                         <a ui-sref="sports">Deporte</a>
                     </li>
                     <li>
-                        <a ui-sref="page({slug: 'nosotros'})">Blog</a>
+                        <a ui-sref="blog({kind: 'post'})">Blog</a>
                     </li>
                     <li>
-                        <a ui-sref="blog({kind: 'post'})">Contacto</a>
+                        <a ui-sref="contact({kind: 'contact'})">Contacto</a>
                     </li>
                 </ul>
             </div>
