Add slider and recomendations in home.html

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Tingsystems"></a>
+                                                            class="logo" alt="Blue Mia"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="header-mainmenu">
@@ -150,13 +150,7 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
-            <div ui-view="content">
-                <section id="content-area">
-                    <div class="container">
-                        <div class="row"></div>
-                    </div>
-                </section>
-            </div>
+            <div ui-view="content"></div>
         </div>
     </div>
 </div>
@@ -176,9 +170,10 @@
 <script src="lib/angular-loading-bar/build/loading-bar.js"></script>
 <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
-<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/angular-deckgrid/angular-deckgrid.js"></script>
 <script src="lib/lightbox2/dist/js/lightbox.js"></script>
+<script src="lib/angular-animate/angular-animate.js"></script>
+<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
