ajuste de estilo de sitio web

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords"
           content="Remolques y carrocerias para camiones">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <base href="/">
+    <!--<base href="/">-->
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
