--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Remolques Magu - Trabajo y material de calidad</title>
+    <title ng-bind="pageTitle">Vive En Armonía - Inmobiliaria</title>
     <meta name="keywords"
-          content="Remolques y carrocerias para camiones">
+          content="Inmobiliaria">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
     <!--Favicon-->
