delete url of remolquesmagu

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords"
           content="Inmobiliaria">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <!--<base href="/">-->
+    <base href="/">
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
@@ -34,7 +34,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.remolquesmagu.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.viveenarmonia.com.mx{{ $state.href($state.current.name) }}"/>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
