Add untracked files

--- a/app/index.html
+++ b/app/index.html
@@ -79,25 +79,22 @@
             <div class="collapse navbar-collapse" id="header-mainmenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#who-are">Nosotros</a>
+                        <a du-smooth-scroll href="#who-are">Nosotros</a>
                     </li>
                     <li>
-                        <a href="#services">Servicios</a>
+                        <a du-smooth-scroll href="#services">Servicios</a>
                     </li>
                     <li>
-                        <a href="#politics">Nuestra política</a>
+                        <a du-smooth-scroll href="#politics">Nuestra política</a>
                     </li>
                     <li>
-                        <a href="#contract">Porqué contratarnos</a>
-                    </li>
-                   <li>
-                        <a ui-sref="page({slug:'nosotros1464721951'})">Porqué contratarnos</a>
+                        <a du-smooth-scroll href="#contract">Porqué contratarnos</a>
                     </li>
                     <li>
-                        <a href="#presence">Presencia</a>
+                        <a du-smooth-scroll href="#presence">Presencia</a>
                     </li>
                     <li>
-                        <a href="#contact">Contacto</a>
+                        <a du-smooth-scroll href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -136,6 +133,7 @@
 <script src="lib/ng-repeat-owl-carousel/dist/ngRepeatOwlCarousel.min.js"></script>
 <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
 <script src="lib/angular-toasty/dist/angular-toasty.js"></script>
+<script src="lib/angular-scroll/angular-scroll.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
