--- a/app/index.html
+++ b/app/index.html
@@ -79,22 +79,22 @@
             <div class="collapse navbar-collapse" id="header-mainmenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a du-smooth-scroll href="#who-are">Nosotros</a>
+                        <a du-smooth-scroll duration="800" href="#who-are">Nosotros</a>
                     </li>
                     <li>
-                        <a du-smooth-scroll href="#services">Servicios</a>
+                        <a du-smooth-scroll duration="800" href="#services">Servicios</a>
                     </li>
                     <li>
-                        <a du-smooth-scroll href="#politics">Nuestra política</a>
+                        <a du-smooth-scroll duration="800" href="#politics">Nuestra política</a>
                     </li>
                     <li>
-                        <a du-smooth-scroll href="#contract">Porqué contratarnos</a>
+                        <a du-smooth-scroll duration="800" href="#contract">Porqué contratarnos</a>
                     </li>
                     <li>
-                        <a du-smooth-scroll href="#presence">Presencia</a>
+                        <a du-smooth-scroll duration="800" href="#presence">Presencia</a>
                     </li>
                     <li>
-                        <a du-smooth-scroll href="#contact">Contacto</a>
+                        <a du-smooth-scroll duration="800" href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
